# multi-timescale-memory-routing

./: .gitignore  ARCHIVE_CONTENTS.md  BASELINE_MVP.md  CITATION.cff  DATASET_MANIFEST.md  LICENSE  README.md  journalplan.txt  paper_run_manifest_index.json  pyproject.toml  researchplan.txt
docs/: freshness_snapshot_protocol.md  github_release_checklist.md  journal_reproducibility.md  public_archive_release.md  public_freshness_schema.md  reproducibility.md
docs/paper/: README.md  paper.docx
multitimescale_memory/: __init__.py  __main__.py  benchmarks.py  campaign.py  freshness.py  freshqa_export.py  journal.py  knowedit.py  memory.py  modeling.py  mquake.py  operations.py  patches.py  popqa.py  public_freshness.py  readiness.py  reporting.py  reward.py  router.py  runner.py  stats.py  types.py  uniedit.py
paper/: ARTIFACT_MAP.md  README.md  main.tex
paper/arxiv/: main.tex
paper/journal/: main.tex
paper/sections/: ablations.tex  abstract.tex  benchmarks.tex  (+8 more)
scripts/: audit_submission_integrity.py  bootstrap_production_env.sh  build_freshqa_public_export.py  build_mquake_reliability_note.py  build_official_freshqa_leakage_audit.py  build_official_stats_bundle 2.py  build_official_stats_bundle.py  build_publication_package.py  build_results_lite_release.py  build_tmlr_boundary_bundle.py  build_tmlr_freshqa_bundle.py  check_experiment_readiness.py  continue_unblocked_wave.py  fetch_benchmark_inputs.py  finalize_uniedit_official.py  publish_public_archive.py  render_official_status.py  run_tmlr_boundary_campaign.py  run_tmlr_campaign.py
tests/: test_mvp.py
(+45 files in other folders)
