[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multitimescale-memory-controller"
version = "0.1.0"
description = "Dependency-light MVP for a novelty-tightened multi-timescale memory controller."
requires-python = ">=3.11"

[tool.setuptools]
packages = ["multitimescale_memory"]
